assets/template-collection.css
/* ... */
@media only screen and (min-width: 768px) and (max-width: 991px) {
  .grid-col-1 .row-cols-md-3 > * {
    flex: 0 0 auto;
    width: 100%;
  }
  .grid-col-1 .row-cols-md-3 > * {
    flex: 0 0 auto;
    width: 100%;
  }
  .grid-col-2 .row-cols-md-3 > * {
    flex: 0 0 auto;
    width: 50%;
  }
  .grid-col-3 .row-cols-md-3 > * {
    flex: 0 0 auto;
    width: 33.3333333333%;
  }
  .grid-col-4 .row-cols-md-3 > * {
    flex: 0 0 auto;
    width: 25%;
  }
}

@media only screen and (max-width: 767px) {
  .grid-col-1 .row-cols-sm-2 > * {
    flex: 0 0 auto;
    width: 100%;
  }
  .grid-col-2 .row-cols-sm-2 > * {
    flex: 0 0 auto;
    width: 50%;
  }
  .grid-col-1 .row-cols-md-3 > * {
    flex: 0 0 auto;
    width: 100%;
  }
}
.offcanvas-filter-sidebar {
  max-width: 350px;
  display: block;
  position: fixed;
  top: 0;
  background: #fff;
  left: 0;
  padding: 30px 20px;
  overflow: auto;
  height: 100%;
  transition: all 0.3s ease 0s;
  z-index: 99;
  transform: translateX(-100%);
  visibility: hidden;
  opacity: 0;
}
.offcanvas-filter-sidebar.active {
  transform: translateX(0);
  visibility: visible;
  opacity: 1;
}

.grid-col-1 .product-grid-item {
  display: flex;
}
.grid-col-1 .product-grid-item__thumbnail {
  width: 300px;
}
.grid-col-1 .product-grid-item__content {
  padding-left: 20px;
  width: calc(100% - 300px);
}
.grid-col-1 .product-grid-item {
  text-align: left;
}
.grid-col-1 .product-grid-item__price,
.grid-col-1 .product__grid_timer .product__countdown {
  justify-content: flex-start;
}
@media only screen and (min-width: 575px) and (max-width: 767px) {
  .grid-col-1 .product-grid-item__content {
    width: calc(100% - 245px);
  }
  .grid-col-1 .product-grid-item__thumbnail {
    width: 245px;
  }
}
@media only screen and (max-width: 575px) {
  .grid-col-1 .product-grid-item {
    flex-direction: column;
  }
  .grid-col-1 .product-grid-item__content {
    padding-left: 0;
    width: 100%;
  }
  .grid-col-1 .product-grid-item__thumbnail {
    width: 100%;
  }
}
.collection_filter_sidebar {
  margin-top: 20px;
  display: block;
}

/*  Search filter css  */
.template-search__header {
  margin-bottom: 3rem;
}

.template-search__search {
  margin: 0 auto 3.5rem;
  max-width: 47.8rem;
}

.template-search__search .search {
  margin-top: 3rem;
}

.template-search--empty {
  padding-bottom: 18rem;
}

@media screen and (min-width: 750px) {
  .template-search__header {
    margin-bottom: 5rem;
  }
}

.search__button .icon {
  height: 1.8rem;
}
.search_result_page {
  position: relative;
  width: 100%;
  display: block;
}
.search_result_bar {
  margin-top: 30px;
}
article.article-card {
  position: relative;
}

.meta__info--item + .meta__info--item {
  padding-left: 2rem;
  margin-left: 2rem;
  position: relative;
}
.meta__info--item + .meta__info--item::before {
  position: absolute;
  width: 5px;
  height: 5px;
  background: rgba(var(--color-foreground));
  content: "";
  border-radius: 100%;
  left: 0;
  margin-left: -5px;
  top: 50%;
  transform: translateY(-50%);
}
.article-card__info {
  margin-top: 2rem;
}
.ratio_page {
  display: flex;
  position: relative;
  justify-content: center;
  align-items: center;
}
.ratio_page:before {
  content: "";
  width: 0;
  height: 0;
  padding-bottom: var(--ratio-percent);
}
@media only screen and (min-width: 750px) {
  .facets-container-drawer.color-background-2 {
    padding: 1rem 1.5rem;
  }
}
@media only screen and (max-width: 749px) {
  .facets-container-drawer.color-background-2 {
    background: transparent;
  }
}
/*  SortBy Css */
ul.filter__sort--by-conatiner {
  position: absolute;
  width: 23.5rem;
  top: 100%;
  left: auto;
  right: 0;
  padding: 2rem;
  margin: 2rem 0 0;
  background: rgba(var(--color-background));
  z-index: 98;
  box-shadow: 0 0 15px rgba(var(--color-foreground), 0.15);
  transition: 0.3s;
  opacity: 0;
  visibility: hidden;
  border-radius: 1rem;
}

li.sortlist__Item {
  list-style: none;
  font-size: 1.5rem;
}
.sortlist__Item [type="radio"] + label:hover {
  text-decoration: underline;
  text-underline-offset: 0.3rem;
  text-decoration-color: rgba(var(--color-foreground), 0.75);
}
li.sortlist__Item + li.sortlist__Item {
  margin-top: 1rem;
}
.facet-filters__field {
  position: relative;
}
button.sortby__button {
  background: transparent;
  color: rgba(var(--color-foreground));
  font-size: 1.5rem;
  opacity: 1;
  padding: 1rem 1.5rem;
  border-radius: 30px;
  margin: 0 !important;
  border: none;
}
.facet-filters__field.active ul.filter__sort--by-conatiner {
  visibility: visible;
  opacity: 1;
  margin-top: 1.5rem;
}

.sortlist__Item [type="radio"].checked,
.sortlist__Item [type="radio"]:not(.checked) {
  position: absolute;
  text-indent: -9999px;
}
.sortlist__Item [type="radio"].checked + label,
.sortlist__Item [type="radio"]:not(.checked) + label {
  position: relative;
  padding-left: 28px;
  cursor: pointer;
  line-height: 20px;
  display: inline-block;
  color: rgba(var(--color-foreground));
}
.sortlist__Item [type="radio"].checked + label:before,
.sortlist__Item [type="radio"]:not(.checked) + label:before {
  content: "";
  position: absolute;
  left: 0;
  top: 0;
  width: 18px;
  height: 18px;
  border: 1px solid rgba(var(--color-foreground), 0.15);
  border-radius: 100%;
  background: rgba(var(--color-background));
}
.sortlist__Item [type="radio"].checked + label:after,
.sortlist__Item [type="radio"]:not(.checked) + label:after {
  content: "";
  width: 12px;
  height: 12px;
  background: rgba(var(--color-foreground));
  position: absolute;
  top: 3px;
  left: 3px;
  border-radius: 100%;
  -webkit-transition: all 0.2s ease;
  transition: all 0.2s ease;
}
.sortlist__Item [type="radio"]:not(.checked) + label:after {
  opacity: 0;
  -webkit-transform: scale(0);
  transform: scale(0);
}
.sortlist__Item [type="radio"].checked + label:after {
  opacity: 1;
  -webkit-transform: scale(1);
  transform: scale(1);
}
.facet-filters.sorting.caption h2.facet-filters__label {
  margin: 0 1rem 0 0;
}
/* ... */

